unpackaged/main/default/objects/Approval_History__c/Approval_History__c.object-meta.xml
<CustomObject>
    <label>Quote Approval History</label>
    <nameField>
        <displayFormat>Approval History - {0}</displayFormat>
        <label>Approval History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Approval History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>