unpackaged/main/default/objects/Approval_History__c/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Approval Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>