unpackaged/main/default/objects/Approval_History__c/fields/Approver_1_Comments__c.field-meta.xml
<CustomField>
    <fullName>Approver_1_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Approver_1 Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>