unpackaged/main/default/objects/Approval_History__c/fields/Approver_1_Name__c.field-meta.xml
<CustomField>
    <fullName>Approver_1_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Approver_1_Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>