unpackaged/main/default/objects/Approval_History__c/fields/Approver_2_Comments__c.field-meta.xml
<CustomField>
    <fullName>Approver_2_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Approver_2 Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>