unpackaged/main/default/objects/Approval_History__c/fields/Approver_3_Name__c.field-meta.xml
<CustomField>
    <fullName>Approver_3_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Approver_3 Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>