unpackaged/main/default/objects/Approval_History__c/fields/ProcessInstance_Id__c.field-meta.xml
<CustomField>
    <fullName>ProcessInstance_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ProcessInstance Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>