unpackaged/main/default/objects/Approval_History__c/fields/Submitter_Name__c.field-meta.xml
<CustomField>
    <fullName>Submitter_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Submitter Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>